3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix bug 1763098 - wrong key placement in random maps.  The key placement breaks
if there is a normal door next to the locked door, so modify code to remove
normal doors next to locked doors.  On broken test map, this change results
in key being placed in right area.
--
random_maps/treasure.c: Update some comments on keyplace(), since the comments
  did not go into limitations on what keyplace does.  Add
  remove_adjacent_doors() to remove the doors, and call to function from
  lock_and_hide_doors()
MSW 2007-09-18

Fix bug 1790456 - dropall with count drops more than 'count' of each
object.
server/c_object.c: in command_dropall(), after each call to drop(),
  set op->contr->count back to original value - drop() sets it to 0.
MSW 2007-09-17

Add ability to specify port that crossfire listens to in settings file.
Handy when you want to run 2 servers on same host and don't want to
mess with command line options.
--
lib/settings: Add port variable and comment on its usage.
server/init.c: Add code to handle port value in settings file.
MSW 2007-09-17

Fix chaos attacktypes when used from a weapon - Fixes bug 1795875.
Problem was target of attack was getting attacktype changed, and
attacker was never getting chaos attacktypes.
--
include/attack.h: move ATTACKS array and Chaos_Attacks structure
  here.  server/attack.c now needs that data, so having it only in
  server/spell_util.c no longer works.
server/attack.c:  Remove call to shuffle_attack(), instead just update
  the local type (attack type) variable.
server/spell_util.c: Remove ATTACKS array - moved to include/attack.h.
MSW 2007-09-16
