@@ -51,7 +51,6 @@
 static int compare_ob_value_lists_one(const object *, const object *);
 static int compare_ob_value_lists(const object *, const object *);
 static void expand_objects(void);
-static void free_object2(object *, int);
 static void permute(int *, int, int);
 static int set_ob_key_value_s(object *, const char *, const char *, int);
 static void get_multi_size(object *, int *, int *, int *, int *);
@@ -1221,7 +1220,7 @@ void free_object(object *ob) {
  * @warning
  * the object's archetype should be a valid pointer, or NULL.
  */
-static void free_object2(object *ob, int free_inventory) {
+void free_object2(object *ob, int free_inventory) {
     object *tmp,*op;
 
     if (!QUERY_FLAG(ob,FLAG_REMOVED)) {
